--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,6 +2,18 @@
 
 {% block body %}
     <h2>Active Listings</h2>
-
-    TODO
+    <div>
+        <ul>
+            {% for list in listings %}
+            <li>
+                <a href="{% url 'listing' list.category.id list.id %}"><strong>{{list.title}}</strong></a>
+                <img src="{{list.imageURL}}" alt="Product Image" height="200px" width="px">
+                {{list.description}}
+                {{list.bid}}
+            </li>
+            {% empty %}
+            There are no {{category}} listings yet
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
