--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -1,10 +1,15 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+<div>
+    <h1>
+        Categories
+    </h1>
+</div>
 <ul>
     {% for category in categories%}
          <li>
-             <a href="{% url 'categoryListings' category.id %}">{{ category }}</a>
+             <a href="{% url 'categoryListings' category.options %}">{{ category }}</a>
         </li>
     {% endfor %}
 </ul>
