--- a/auctions/templates/auctions/userAuctions.html
+++ b/auctions/templates/auctions/userAuctions.html
@@ -8,7 +8,7 @@
     <ul>
         {% for auction in userAuctions %}
         <li>
-            <a href="{% url 'listing' auction.category.id auction.id %}"><strong>{{list.title}}</strong></a>
+            <a href="{% url 'listing' auction.category.id auction.id %}"><strong>{{auction.title}}</strong></a>
             <img src="{{auction.imageURL}}" alt="Product Image" height="200px" width="px">
             {{auction.description}}
             {{auction.bid}}
