--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -17,11 +17,16 @@
                 </a>
             {% endif %}
         {% elif user.is_authenticated and listing.user.id == user.id %}
-            <a href="">
-                <button>
-                    Close Auction
-                </button>
-            </a>
+            {% if listing.active is True %}
+                <a href="{% url 'close' listing.id %}">
+                    <button>
+                        Close Auction
+                    </button>
+                </a>
+            {% else %}
+                Auction Closed
+                Winner: {{listing.winner}}
+            {% endif %}
         {% endif %}
     </div>
     <div>
@@ -38,17 +43,17 @@
         <p>Initial bid: <strong>{{listing.bid}}</strong> </p>
         <p>Higher bid: <strong>{{higherBid.bid}}</strong> </p>
         <p>Bids so far: <strong>{{bidsSoFar}}</strong> <p>
-
-        
     </div>
     {% if user.is_authenticated %}
-        <div>
-            <form action="{% url 'listing' listing.category listing.id %}" method="POST" name="bid">
-                {% csrf_token %}
-                {{ bidForm.as_ul }}
-                <button type="submit" class="btn btn-primary" name="bidBtn">Add new bid</button>
-            </form>
-        </div>
+        {% if listing.active is True %}
+            <div>
+                <form action="{% url 'listing' listing.category listing.id %}" method="POST">
+                    {% csrf_token %}
+                    {{ bidForm.as_ul }}
+                    <button type="submit" class="btn btn-primary" name="bidBtn">Add new bid</button>
+                </form>
+            </div>
+        {% endif %}
         <div>
             <form action="{% url 'listing' listing.category listing.id %}" method="POST">
                 {% csrf_token %}
