--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -28,11 +28,15 @@
                     <a class="nav-link" href="{% url 'create' %}">Create Listing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'userAuctions' %}">MyAuctions</a>
+                    <a class="nav-link" href="{% url 'userAuctions' %}">MyPostedAuctions</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'won' %}">Auctions Won</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'watchlist_view' %}">Watchlist</a>
                 </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                 </li>
