--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,92 @@
 body {
-    padding: 10px;
+    margin: 0;
+    background-color: lightskyblue;
+}
+
+.title{
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(11, 10, 100);
+}
+
+#title_text{
+    color: white;
+    font-family: "Righteous", sans-serif;
+    font-weight: bolder;
+}
+
+#userSignMessage{
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav{
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(190, 32, 32); /*rgba(192, 28, 28, 0.753)*/
+}
+
+.nav-link{
+    color: white;
+}
+
+.subtitle{
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#subtitle_text{
+    color:rgb(11, 10, 100);
+    font-family: "Righteous", sans-serif;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+.outsider{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.container-fluid{
+    background-color: white;
+    border-radius: 15px;
+}
+
+.row{
+    justify-content: center;
+    align-items: center;
+}
+
+.col{
+    flex-grow: unset;
+}
+.item{
+    list-style: none;
+    width: 300px; ;
+    border: 1px solid lightslategray;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+
+.item_title{
+    text-align: center;
+}
+
+.image_div{
+    width: 100%;
+    height: 250px;
+    padding-top: 5px;
+    text-align: center;
+}
+.item_image{
+    width: 90%;
+    height: 90%;
+    object-fit: contain;
+}
+.item_price, .item_description{
+    text-align: center;
+    font-family: "Righteous", sans-serif;
 }
