--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -5,17 +5,26 @@
     <head>
         <title>{% block title %}Auctions{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'auctions/styles.css' %}">
     </head>
     <body>
-        <h1>Auctions</h1>
-        <div>
-            {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>.
-            {% else %}
-                Not signed in.
-            {% endif %}
+        <div class="title">
+            <h1 id="title_text">AUCTIONS</h1>
         </div>
+        
+        {% if user.is_authenticated %}
+            <div id="userSignMessage">
+                <div>Welcome: <strong>{{ user.username }}</strong>.</div>
+                <div style="padding-left: 10px;">
+                    <a href="{% url 'logout' %}">
+                        <button type="button" class="btn btn-dark">
+                            Log Out
+                        </button>
+                    </a>
+                </div>
+            </div>        
+        {% endif %}
+
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
@@ -37,9 +46,6 @@
                     <a class="nav-link" href="{% url 'watchlist_view' %}">Watchlist</a>
                 </li>
                 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                </li>
             {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}">Log In</a>
