--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -1,8 +1,9 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-
-    <h2>Register</h2>
+    <div class="subtitle">
+        <h2 class="subtitle_text">Register</h2>
+    </div>
 
     {% if message %}
         <div>{{ message }}</div>
