--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -2,7 +2,10 @@
 
 {% block body %}
 
-    <h2>Login</h2>
+    <div class="subtitle">
+        <h2 class="subtitle_text">Login</h2>
+    </div>
+    
 
     {% if message %}
         <div>{{ message }}</div>
