--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -16,7 +16,7 @@
                         <div class="item_title">
                             <a href="{% url 'categoryListings' category.options %}">
                                 <div class="image_div">
-                                    <strong style="font-size: larger; color: rgb(11, 10, 100);">{{ category.options }}</strong>
+                                    <h4 class="display-4" id="description_title">{{ category.options }}</h4>
                                     <img class="item_image" src="{{category.categoryImage}}" alt="">
                                 </div>   
                             </a>
