--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -20,7 +20,9 @@
                         <li class="item">
                             <div class="item_title">
                                 <a href="{% url 'listing' list.category.options list.id %}">
-                                    <strong>{{list.title}}</strong>
+                                    <div style="display: flex; align-items: center; justify-content: center;">
+                                        <h4 class="display-4" id="description_title">{{list.title}}</h4>
+                                    </div>
                                     <div class="image_div">
                                         <img class="item_image" src="{{list.imageURL}}" alt="Product Image" height="200px" width="px">
                                     </div>
@@ -28,7 +30,7 @@
                             </div>
                             <hr>
                             <div class="item_price">
-                                <strong> $ {{list.bid}}</strong>
+                                Initial bid: <strong> $ {{list.bid}}</strong>
                             </div>
                             <div class="item_description">
                                 {{list.description}}
