--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -2,6 +2,7 @@
 
 {% block body %}
 
+<div class="outsider">
     <div class="subtitle">
         <h2 class="subtitle_text">Login</h2>
     </div>
@@ -19,9 +20,11 @@
         <div class="form-group">
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
-        <input class="btn btn-primary" type="submit" value="Login">
+        <input class="btn btn-dark" type="submit" value="Login">
     </form>
 
     Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+</div>
+    
 
 {% endblock %}
